--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
       name: '',
       repo: '',
       loadNavbar: true,
-      coverpage: true
+      coverpage: true,
+      basePath: 'cadihowley.github.io/'
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
