--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       repo: '',
       loadNavbar: true,
       coverpage: true,
-      basePath: 'cadihowley.github.io/'
+      basePath: 'cadihowley.github.io/',
+      relativePath: true
+
     }
   </script>
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
