--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       loadNavbar: true,
       coverpage: true,
       basePath: 'cadihowley.github.io/',
-      relativePath: true
+      relativePath: true,
+      homepage: 'README.md'
 
     }
   </script>
