--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       coverpage: true,
       basePath: 'cadihowley.github.io/',
       relativePath: true,
-      homepage: 'README.md'
+      homepage: 'cadihowley.github.io/README.md'
 
     }
   </script>
