--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
       repo: '',
       loadNavbar: true,
       coverpage: true,
-      basePath: 'cadihowley.github.io/',
+      loadSidebar: false,
       relativePath: true,
-      homepage: 'cadihowley.github.io/README.md'
+      hideSidebar: true,
+      onlyCover: true,
+      basePath: 'https://github.com/cadihowley/cadihowley.github.io'
 
     }
   </script>
