--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       relativePath: true,
       hideSidebar: true,
       onlyCover: true,
-      basePath: 'https://github.com/cadihowley/cadihowley.github.io'
+      basePath: 'cadihowley.github.io'
 
     }
   </script>
