--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       loadNavbar: true,
       coverpage: true,
       loadSidebar: false,
-
+      homepage: 'cadihowley.github.io/README',
       hideSidebar: true,
       onlyCover: true,
       basePath: 'cadihowley.github.io'
