--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       loadNavbar: true,
       coverpage: true,
       loadSidebar: false,
-      homepage: 'cadihowley.github.io/README',
+      
       hideSidebar: true,
       onlyCover: true,
-      basePath: 'cadihowley.github.io'
+      basePath: '/'
 
     }
   </script>
