--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
       loadNavbar: true,
       coverpage: true,
       loadSidebar: false,
-      
+      relativePath: true,
       hideSidebar: true,
       onlyCover: true,
-      basePath: '/'
+      basePath: 'github.com/cadihowley/cadihowley.github.io'
 
     }
   </script>
