--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
       relativePath: true,
       hideSidebar: true,
       onlyCover: true,
-      basePath: 'github.com/cadihowley/cadihowley.github.io'
+      basePath: '/cadihowley.github.io/'
+      homepage: '/README.md'
 
     }
   </script>
