--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       relativePath: true,
       hideSidebar: true,
       onlyCover: true,
-      basePath: '/cadihowley.github.io/',
-      homepage: '/README.md'
+      basePath: '/cadihowley.github.io/'
+      
 
     }
   </script>
