--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
   <script>
     window.$docsify = {
       name: '',
-      repo: '',
+      repo: 'cadihowley/cadihowley.github.io',
       loadNavbar: true,
       coverpage: true,
       loadSidebar: false,
       relativePath: true,
       hideSidebar: true,
-      onlyCover: true,
-      basePath: '/cadihowley.github.io/'
+      
+      basePath: '/cadihowley.github.io/',
+      homepage:'/README.md'
       
 
     }
