--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       hideSidebar: true,
       
       basePath: '/cadihowley.github.io/',
-      homepage:'/cadihowley.github.io/README.md'
+      homepage:'https://github.com/cadihowley/cadihowley.github.io/README.md'
       
 
     }
