--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       repo: 'cadihowley/cadihowley.github.io',
       loadNavbar: true,
       coverpage: true,
-     
+     relativePath: true,
       
       basePath: '/cadihowley.github.io/',
       homepage:'/README.md'
