--- a/index.html
+++ b/index.html
@@ -2,34 +2,65 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>Cadi Howley</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <!-- Theme: Simple Dark -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css">
+<link rel="stylesheet" href="assets/css/theme-simple-dark.css">
+<!-- Bootstrap CDN-->
+<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 
+
+<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
+<style>
+  
+    gif {
+  max-width: 100%;
+  max-height:100%;
+  margin: auto;
+  }
+  
+ 
+  :root {
+  --cover-background-image: url("/assets/img/background.png");
+  --heading-font-family: Abel;
+  --heading-h1-font-family: Abel;
+  --base-font-family     : Abel;
+  --base-font-size       : 16px;
+  --blockquote-background             : var(--mono-tint1);
+}
+  :root {
+    --sidebar-width                               : 17rem;
+    --content-max-width                 : 90rem;
+    --blockquote-border-color:red;
+  }
+ 
+</style>
 </head>
+
 <body>
   <div id="app"></div>
+
+
   <script>
     window.$docsify = {
       name: '',
       repo: 'cadihowley/cadihowley.github.io',
+
       loadNavbar: true,
       coverpage: true,
-     relativePath: true,
-      
-      basePath: '/cadihowley.github.io/',
-      homepage:'/README.md'
-      
-
+      relativePath:true,
+      //hideSidebar: true,
+      onlyCover: true,
+      subMaxLevel: 2,
+      loadSidebar: true,
+      basePath: '/cadihowley.github.io/'
     }
   </script>
+  
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 <!-- docsify-themeable (latest v0.x.x) -->
 <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
-
-
 </body>
 </html>
