--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       coverpage: true,
       
       //hideSidebar: true,
-      onlyCover: true,
+      //onlyCover: true,
       subMaxLevel: 2,
       loadSidebar: true,
       basePath: '/cadihowley.github.io/'
