--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
  
   :root {
-  --cover-background-image: url("/assets/img/background.png");
+  --cover-background-image: url("/assets/img/background.jpg");
   --heading-font-family: Abel;
   --heading-h1-font-family: Abel;
   --base-font-family     : Abel;
@@ -31,8 +31,8 @@
   --blockquote-background             : var(--mono-tint1);
 }
   :root {
-    --sidebar-width                               : 17rem;
-    --content-max-width                 : 90rem;
+    --sidebar-width                               : 0.1rem;
+    --content-max-width                 : 100%;
     --blockquote-border-color:red;
   }
  
@@ -51,10 +51,10 @@
       loadNavbar: true,
       coverpage: true,
       
-      //hideSidebar: true,
+      hideSidebar: true,
       //onlyCover: true,
       subMaxLevel: 2,
-      loadSidebar: true,
+      //loadSidebar: true,
       basePath: '/cadihowley.github.io/'
     }
   </script>
