--- a/index.html
+++ b/index.html
@@ -86,7 +86,8 @@
       //onlyCover: true,
       subMaxLevel: 2,
       //loadSidebar: true,
-      basePath: '/cadihowley.github.io/'
+      basePath: '/cadihowley.github.io/',
+      externalLinkTarget: '_blank',
     }
   </script>
   
