--- a/index.html
+++ b/index.html
@@ -76,18 +76,18 @@
 
   <script>
     window.$docsify = {
-      name: '',
+      name: 'Cadi Howley',
       repo: 'cadihowley/cadihowley.github.io',
 
       loadNavbar: true,
       coverpage: true,
-      
       hideSidebar: true,
       //onlyCover: true,
       subMaxLevel: 2,
       //loadSidebar: true,
       basePath: '/cadihowley.github.io/',
       externalLinkTarget: '_blank',
+      logo: '/assets/img/quote.svg',
     }
   </script>
   
