--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       basePath: '/cadihowley.github.io/',
       externalLinkTarget: '_blank',
       logo: '/assets/img/quote.svg',
+      auto2top: true,
     }
   </script>
   
