--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
 <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 <style>
   
-    gif {
-  max-width: 100%;
-  max-height:100%;
-  margin: auto;
+    .gif {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    object-fit: contain;
   }
   
  
