--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="Description">
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-
+  <link rel="icon" href="assets/img/quote.svg" type="image/x-icon">
   <!-- Theme: Simple Dark -->
-<link rel="stylesheet" href="assets/css/theme-simple-dark.css">
-<!-- Font Awesome-->
-<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/theme-simple-dark.css">
+  <!-- Font Awesome-->
+  <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  <!-- Google Font-->
+  <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
 
-
-<link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
-<style>
+  <style>
   .gif {
     display: block;
     margin-left: auto;
@@ -62,7 +62,7 @@
      fill: white;
      color: black;
   }
-</style>
+  </style>
 </head>
 
 <body>
@@ -77,7 +77,7 @@
       //onlyCover: true,
       subMaxLevel: 2,
       //loadSidebar: true,
-      basePath: '/cadihowley.github.io/',
+      //basePath: '/cadihowley.github.io/',
       externalLinkTarget: '_blank',
       logo: '/assets/img/quote.svg',
       auto2top: true,
@@ -87,7 +87,12 @@
   <script src="//cdn.jsdelivr.net/npm/docsify/lib/docsify.min.js"></script>
 
   <!-- docsify-themeable (latest v0.x.x) -->
-<script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
-
+  <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
+  
+  <script type="text/javascript">
+      $(window).load(function() {
+          $(".loader").fadeOut("slow");
+      });
+      </script>
 </body>
 </html>
