--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       //onlyCover: true,
       subMaxLevel: 2,
       //loadSidebar: true,
-      //basePath: '/cadihowley.github.io/',
+      basePath: '/cadihowley.github.io/',
       externalLinkTarget: '_blank',
       logo: '/assets/img/quote.svg',
       auto2top: true,
