--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     window.$docsify = {
       name: 'Cadi Howley',
       repo: 'cadihowley/cadihowley.github.io',
-      loadNavbar: true,
+      //loadNavbar: true,
       coverpage: true,
       hideSidebar: true,
       //onlyCover: true,
