--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <script>
     window.$docsify = {
       name: 'Cadi Howley',
-      repo: 'cadihowley/cadihowley.github.io',
+      repo: 'cadihowley',
       //loadNavbar: true,
       coverpage: true,
       hideSidebar: true,
