--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <!-- Google Font-->
   <link href='https://fonts.googleapis.com/css?family=Abel' rel='stylesheet'>
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Bad+Script&display=swap" rel="stylesheet">
   
   <style>
    h1 {
-    font-family: 'Caveat', cursive;
+    font-family: 'Bad Script', cursive;
   }
   
   .gif {
@@ -94,7 +94,7 @@
       //onlyCover: true,
       subMaxLevel: 2,
       //loadSidebar: true,
-      basePath: '/cadihowley.github.io/',
+      //basePath: '/cadihowley.github.io/',
       externalLinkTarget: '_blank',
       logo: '/assets/img/quote.svg',
       auto2top: true,
