--- a/thanks.html
+++ b/thanks.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content='3; url =https://www.cadihowley.dev' />
     <title>Form Submitted</title>
 
     <link rel="icon" href="assets/img/favicon.ico" type="image/x-icon" />
@@ -12,7 +13,7 @@
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
-    />
+    />  
 
     <link rel="stylesheet" href="assets/css/thanks.css" />
 
