fixes form submission

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div class="col-lg-12">
             <label class="text-warning">Your message:</label>
-            <textarea class="textarea" rows="10" placeholder="Your message here"></textarea>
+            <textarea class="textarea" rows="10" name="message" placeholder="Your message here"></textarea>
           </div>
           <div class="col-lg-2 col-md-4 submit-form">
             
