--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <div class="row">
             <div class="col-md-6 photo-col ">
               <h2 class="about-heading">About Me</h2>
-              <img class="my-photo" src="assets/img/cadi.png">
+              <img class="my-photo" src="assets/img/cadi.webp">
             </div>
             <div class="col-md-6 about-col ">
          
