--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <div class="col heading-col">
           <h1 class="banner-heading">Cadi Howley</h1>
           <h2 class="banner-subheading">tech writer</h2>
-          <a type="button" class="btn btn-lg btn-outline-light" href="#my-work">See my work</a>
-          <a type="button" class="btn btn-lg btn-warning" href="#contact-me">Get in touch!</a>
+          <a  class="btn btn-lg btn-outline-light" href="#my-work">See my work</a>
+          <a class="btn btn-lg btn-warning" href="#contact-me">Get in touch!</a>
         </div>
         
       </div>
