--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
       <div class="container-fluid">
        
           <div class="row">
-            <div class="col-md-6">
-              <h2 class="about-heading text-center">About Me</h2>
+            <div class="col-md-6 text-md-left text-center">
+              <h2>About Me</h2>
               <img class="my-photo" src="assets/img/cadi.png">
             </div>
             <div class="col-md-6 about-col text-md-left text-center ">
