adjusts layout for readability

--- a/writing/tutorial.html
+++ b/writing/tutorial.html
@@ -49,9 +49,10 @@
         </nav>
     </header>
     <main>
-        <article>  
+        <article >  
+            <section >
             <header> <h1 class="title">Tutorial: Web development on the iPad</h1></header> 
-            <section>
+            
                 <p>While there are online integrated development environments (IDE) out there (such as GitPod or Codesandbox), these still have some limitations on the iPad - the biggest one being the inability to copy and paste.
                 </p>
                 <p>In this tutorial we'll be using the iPad to interface with a Raspberry Pi 4 running Code-OSS as the IDE. Code-OSS is the open-source code Microsoft's VSCode is based on, so it may look familiar to you!
@@ -66,7 +67,7 @@
                     <li>A solid-state drive (SSD) to use as a default drive instead of the microSD card (optional, but highly recommended - see <a target="_blank" href="https://www.maketecheasier.com/sd-card-vs-ssd/">here.</a></li>
                     <li>A computer (Mac, Windows or Linux) with <a target="_blank" href="https://www.balena.io/etcher/">Balena Etcher</a> installed</li>
                     <li>Internet connectivity, either via ethernet cable or Wifi network</li>
-                    <li>The <a target="_blank" href="https://apps.apple.com/us/app/remote-desktop-mobile/id714464092#?platform=ipad">Microsoft Remote Desktop</a> app installed on your iPad</li>     ubuntu@ubuntu:~ 
+                    <li>The <a target="_blank" href="https://apps.apple.com/us/app/remote-desktop-mobile/id714464092#?platform=ipad">Microsoft Remote Desktop</a> app installed on your iPad</li>     
                     <li>The <a target="_blank" href="https://apps.apple.com/us/app/shelly-ssh-client/id989642999">Shelly - SSH Client</a>
                      app installed on your iPad (free trial of the Pro features)</li>
                     <li>A bluetooth keyboard and mouse for your iPad (optional)</li>
