--- a/writing/tutorial.html
+++ b/writing/tutorial.html
@@ -27,7 +27,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-md navbar-dark custom-nav ">
+        <nav id="navbar" class="navbar fixed-top navbar-expand-md navbar-dark custom-nav ">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarWork" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                  <span class="navbar-toggler-icon"></span>
             </button>
@@ -49,9 +49,12 @@
         </nav>
         
     </header>
-    <main>
+    
+
+
+
         <article >  
-            <section >
+            <section>
             <header> <h1 class="title">Tutorial: Web development on the iPad</h1></header> 
             <hr>
                 <p>While there are online integrated development environments (IDE) out there (such as GitPod or Codesandbox), these still have some limitations on the iPad - the biggest one being the inability to copy and paste.
