--- a/verus/index.html
+++ b/verus/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="/css/main.min.css">
+    <link rel="stylesheet" href="/verus/css/main.css">
 </head>
 <body>
     <main>
@@ -80,7 +80,7 @@
                 <p>Auckland City</p>                
                 <br>
               
-                <img class="bio-photo" src="/assets/maria.JPG">
+                <img class="bio-photo" src="/verus/assets/maria.JPG">
             </div>
             <div class="bio-col col-sm-12 col-md-6">
                 <p>Maria attended Auckland University graduating with her BA.LLB in 1994. She has been practicing since being admitted to the Bar in the same year.</p>
@@ -146,14 +146,14 @@
         </div>
 
         <div id="footer">
-          <p class="copyright">Copyright 2020 <a class="footer-link" href="cadihowley.dev">Cadi Howley</a></p>
+          <p class="copyright">Copyright 2020 <a class="footer-link" href="https://cadihowley.dev">Cadi Howley</a></p>
           
         </div>
     </main>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  <script src="index.js"></script>
+  <script src="/verus/index.js"></script>
   
 </body>
 </html>
